--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,7 @@ Keras-Preprocessing==1.1.2
 matplotlib==3.5.2
 Opencv-python==4.6.0.66
 tensorflow==2.11.0
+protobuf==3.19.6
+streamlit_lottie==0.0.3
 sklearn==0.0.post1
 seaborn==0.11.2
